--- a/KLS_WEB/KLS_WEB/Views/Clients/ActiveRoutes/Checkpoints.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/ActiveRoutes/Checkpoints.cshtml
@@ -12,7 +12,7 @@
         <div class="d-flex flex-nowrap">
             <div class="p-2">
                 <div class="text-left d-flex p-2">
-                    <a href="/Clients/ActiveRoutes/@idruta">
+                    <a href="/Clients/ActiveRoutes/@id">
                         <div class="material-icons icon-red">arrow_back</div>
                     </a>
                     <div class="text-uppercase poppins medium size-24 pl-2">CHECKPOINTS</div>
@@ -38,7 +38,11 @@
                         <th style="width:3%;" class="text-center">ACCIONES</th>
                     </tr>
                 </thead>
-                <tbody id="table-info"></tbody>
+                <tbody id="table-info">
+                    <tr>
+                        <td rowspan="4">Cargando...</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
 
