--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -580,10 +580,10 @@
             $.get("/Clients/Origins/getOrigen/", { "Id_Cliente": ClientId }, response => {
                 $(`#editorigen`).empty().append(`<option value="0" disabled selected>SELECCIONA</option>`);
                 response.length || ClientId == 0 ? (response.map(({ id, estatus, nombre }) => {
-                    estatus === 1 && $(`#editorigen`).append(`<option value="${id}">${nombre}</option>`);
+                    estatus == 1 && $(`#editorigen`).append(`<option value="${id}">${nombre}</option>`);
                 })) : (dToast("warning", "El cliente seleccionado no tiene orígenes.", "Atencion!"));
 
-                //dSelect(`editorigen`);
+                dSelect(`editorigen`);
             }).fail(error => {
                 console.error(error);
                 dToast("error", "Error al obtener los origenes del cliente", "Atencion!");
@@ -592,10 +592,10 @@
             $.get("/Clients/Destinations/getDestino/", { "Id_Cliente": ClientId }, response => {
                 $(`#editdestino`).empty().append(`<option value="0" disabled selected>SELECCIONA</option>`);
                 response.length || ClientId == 0 ? (response.map(({ id, estatus, nombre }) => {
-                    estatus === 1 && $(`#editdestino`).append(`<option value="${id}">${nombre}</option>`);
+                    estatus == 1 && $(`#editdestino`).append(`<option value="${id}">${nombre}</option>`);
                 })) : (dToast("warning", "El cliente seleccionado no tiene destinos.", "Atencion!"));
 
-                //dSelect(`editdestino`);
+                dSelect(`editdestino`);
             }).fail(error => {
                 console.error(error);
                 dToast("error", "Error al obtener los destinos del cliente", "Atencion!");
