--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -81,10 +81,10 @@
                                 <option value="0" selected disabled>SELECCIONA</option>
                             </select>
                         </div>
-                        <div class="col-4">
+                        @*<div class="col-4">
                             <label for="editreferencia" class="form-label size-12 font-weight-bold float-left">REFERENCIA</label>
                             <input type="text" class="form-control form-control-sm" id="editreferencia" name="folio" value="-" disabled />
-                        </div>
+                        </div>*@
                     </div>
                     <div class="row mt-3">
                         <div class="col-5">
@@ -360,9 +360,9 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form class="mb-3" onsubmit="event.preventDefault(), upload(this)">
+                <form id="formcsv" class="mb-3" onsubmit="event.preventDefault(), upload(this)">
                     <div class="mb-3">
-                        <input class="form-control" type="file" id="formFile" name="csv" accept=".csv" onchange="importf(this)">
+                        <input class="form-control" type="file" id="formFile" name="csv" accept=".csv" onchange="importf(this)" required>
                     </div>
                     <button id="sendcsv" type="submit" class="btn btn-dark">ENVIAR</button>
                 </form>
@@ -371,7 +371,7 @@
             </div>
             <div class="modal-footer d-flex flex-column">
                 <p class="text-info size-12">Es importante que el archivo CSV tenga codificación UTF-8 para el correcto tratamiento de acentos y caracteres especiales</p>
-                <table class="table table-striped table-bordered display table-hover table-csv text-uppercase" width="100%">
+                <table class="table table-striped table-bordered display table-hover table-csv text-uppercase d-none" width="100%">
                     <thead>
                         <tr>
                             <th>CLIENTE</th>
@@ -727,7 +727,9 @@
             $('#rutaid').empty().append(`<option value="0" selected disabled>SELECCIONA UNA OPCIÓN</option>`);
             Id > 0 ? (
                 $.get('/Demand/GetDemand/', { Id: Id }, response => {
-                    const { clientId, routeId } = response;
+                    const { folio, routeId } = response;
+                    title = `EDITAR DEMANDA - ${folio}`;
+                    $('#modalAddEditlabel').text(title);
                     response && Object.entries(response).map(([k, v]) => {
                         v = k.includes('fechadisponibilidad') ? new Date(v).toISOString().substring(0, 16) : v;
                         $(`[name=${k.toLowerCase()}]`).val(v);
@@ -738,8 +740,7 @@
                         $('#addedittipounidad').trigger('change');
                         $('#rutaid').val(routeId).trigger('change');
                     }, 500);
-                }),
-                title = 'EDITAR DEMANDA'
+                })
             ) : (
                 title = 'AGREGAR DEMANDA', $('#addEditDemand')[0].reset(), $('#addedittipounidad').val(0).trigger('change')
             );
@@ -908,8 +909,8 @@
                 initComplete: () => {
                     $('#modalbusqueda').modal('hide');
                     $('#table_length').html(`<a href="javascript:void(0);" class="btn btn-sm btn-outline-secondary float-right" onclick="addEdit(0, 0, 0, 0)" style="height: 52px;width: 52px;"><span class="material-icons" style="padding-top: 9px;">add</span></a>
-                            <a href="javascript:void(0);" class="btn btn-sm btn-outline-secondary float-right d-flex flex-column" onclick="$('#modalcargamasiva').modal('show')" style="margin-right: .3rem;text-decoration: unset !important;"><span class="material-icons">upload</span><span style="font-size: 10px; margin-top: .2rem;">importar</importar></a>`).show();
-                    $('[aria-controls="table"]').prop('placeholder', 'BUSCAR');
+                            <a href="javascript:void(0);" class="btn btn-sm btn-outline-secondary float-right d-flex flex-column" onclick="$('#modalcargamasiva').modal('show'), $('#formcsv')[0].reset(), $('.table-csv').addClass('d-none')" style="margin-right: .3rem;text-decoration: unset !important;"><span class="material-icons">upload</span><span style="font-size: 10px; margin-top: .2rem;">importar</importar></a>`).show();
+                    //$('[aria-controls="table"]').prop('placeholder', 'BUSCAR');
                     setTimeout(() => $('.filtro').removeClass('d-none'), 150);
                 }
             });
@@ -966,7 +967,7 @@
                         url: '/json/dt-es.json'
                     },
                     initComplete: () => {
-                        $('.table-csv').parent().addClass('col-12');
+                        $('.table-csv').removeClass('d-none').parent().addClass('col-12');
                     }
                 });
             };
