--- a/KLS_WEB/KLS_WEB/Views/Home/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Kls";
 }
 
-<div class="font-barlow pt-4 mt-4" style="font-size:49px">
+<div class="font-barlow pt-4 mt-4" style="font-size:49px;text-align:center;">
     <div>BIENVENIDO A</div>
     <strong>KLS.NET</strong>
 </div>
