--- a/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
+++ b/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
@@ -270,7 +270,7 @@ form .form-group {
     .wrapper > .data-content {
         flex: 1;
         background-color: #f7f7f7;
-        text-align: center;
+        text-align: left !important;
         width: 50% !important;
     }
 
